[MOGURI-2] fix : event(attendance, quiz) CRUD 메소드 기능, 버그 수정