@@ -4,6 +4,9 @@ import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.moguri.common.enums.ReturnCode;
 import org.moguri.common.response.ApiResponse;
+import org.moguri.common.response.MoguriPage;
+import org.moguri.common.response.PageRequest;
+import org.moguri.common.validator.PageLimitSizeValidator;
 import org.moguri.event.attendance.domain.Attendance;
 import org.moguri.event.attendance.param.AttendanceCreateParam;
 import org.moguri.event.attendance.service.AttendanceService;
@@ -11,7 +14,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/attendance")
@@ -21,12 +23,17 @@ public class AttendanceController {
     private final AttendanceService attendanceService;
 
     @GetMapping("")
-    public ApiResponse<List<AttendanceItem>> getAttendanceList() {
-        List<Attendance> Attendances = attendanceService.getAttendanceList();
-        List<AttendanceItem> items = Attendances.stream()
-                .map(AttendanceItem::of)
-                .collect(Collectors.toList());
-        return ApiResponse.of(items);
+    public ApiResponse<MoguriPage<Attendance>> getAttendances(AttendanceGetRequest request) {
+
+        PageLimitSizeValidator.validateSize(request.getPage(), request.getLimit(), 100);
+        PageRequest pageRequest = PageRequest.of(request.getPage(), request.getLimit());
+
+        List<Attendance> Attendances = attendanceService.getAttendances(pageRequest);
+        int totalCount = attendanceService.getTotalCount();
+
+        return ApiResponse.of(MoguriPage.of(pageRequest, totalCount,
+                Attendances.stream().map(AttendanceItem::of).toList()));
+
     }
 
     @GetMapping("/{attendanceId}")
@@ -37,40 +44,48 @@ public class AttendanceController {
         return ApiResponse.of(AttendanceItem.of(attendance));
     }
 
-    @PostMapping
+    @PostMapping("")
     public ApiResponse<ReturnCode> create(@RequestBody AttendanceCreateRequest request) {
+
         AttendanceCreateParam param = request.convert();
         attendanceService.createAttendance(param.toEntity());
+
         return ApiResponse.of(ReturnCode.SUCCESS);
     }
 
     @Data
-    private static class AttendanceItem {
+    public static class AttendanceGetRequest {
 
-        private long attendance_id;
-        private long member_id;
-        private Date attendance_date;
+        private int page = 0;
+        private int limit = 30;
+        //default 값
+    }
+
+    @Data
+    private static class AttendanceItem {
+        private long attendanceId;
+        private long memberId;
+        private Date attendanceDate;
 
         private static AttendanceItem of(Attendance attendance) {
             AttendanceItem converted = new AttendanceItem();
-            converted.setAttendance_id(attendance.getAttendance_id());
-            converted.setMember_id(attendance.getMember_id());
-            converted.setAttendance_date(attendance.getAttendance_date());
+            converted.setAttendanceId(attendance.getAttendanceId());
+            converted.setMemberId(attendance.getMemberId());
+            converted.setAttendanceDate(attendance.getAttendanceDate());
             return converted;
         }
     }
 
     @Data
     public static class AttendanceCreateRequest {
-        private long member_id;
-        private Date attendance_date;
+        private long memberId;
+        private Date attendanceDate;
 
         public AttendanceCreateParam convert() {
             return AttendanceCreateParam.builder()
-                    .member_id(member_id)
-                    .attendance_date(attendance_date)
+                    .memberId(memberId)
+                    .attendanceDate(attendanceDate)
                     .build();
         }
     }
-
 }
